# backend-api

./: .env.dist  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  entrypoint.sh  pyproject.toml
authentication/: admin.py  auth_views.py  permissions.py  urls.py
bar/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
bar/tests/: conftest.py  test_orders.py  test_references.py
core/: settings.py  urls.py
